--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
   },
   "homepage": "https://github.com/CharlesPiercey/Way-Of-The-Crane#readme",
   "dependencies": {
+    "jquery": "^3.4.1",
+    "jquery-smooth-scroll": "^2.2.0",
+    "lazysizes": "^5.0.0",
+    "normalize.css": "^8.0.1",
+    "picturefill": "^3.0.3",
+    "waypoints": "^4.0.1"
+  },
+  "devDependencies": {
     "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.5",
+    "cssnano": "^4.1.10",
     "del": "^4.1.1",
     "gulp": "^4.0.2",
-    "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^5.0.3",
     "gulp-modernizr": "^3.2.1",
     "gulp-postcss": "^8.0.0",
@@ -36,17 +44,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-usemin": "^0.3.29",
     "gulp-watch": "^5.0.1",
-    "jquery": "^3.4.1",
-    "jquery-smooth-scroll": "^2.2.0",
-    "lazysizes": "^5.0.0",
-    "normalize.css": "^8.0.1",
-    "picturefill": "^3.0.3",
-    "postcss-hexrgba": "^1.0.1",
-    "postcss-import": "^12.0.1",
-    "postcss-mixins": "^6.2.1",
-    "postcss-nested": "^4.1.2",
-    "postcss-simple-vars": "^5.0.2",
-    "waypoints": "^4.0.1",
+    "js-yaml": "^3.13.1",
     "webpack": "^4.32.2"
   }
 }
